# pet-directory

./: README.md
OneDrive/Desktop/Calculator_3D/calculator-3d/: README.md  REFLECTION.md  package-lock.json  package.json
OneDrive/Desktop/Calculator_3D/calculator-3d/src/: App.css  App.js
pet-directory/: .dockerignore  .env.development  .env.production  .env.test  .sequelizerc  Dockerfile  backup.sh  cypress.config.js  docker-compose.yml  index.js  jest.config.js  merge-scaffold.patch  package-lock.json  package.json  project-status.js  project-status.js.old  project-status.json  swagger.yml  test-backend.sh
pet-directory/.github/workflows/: ci.yml
pet-directory/config/: config.js  db.js  jwt.js  redis.js
pet-directory/controllers/: authController.js  businessController.js  reviewController.js  serviceController.js  userController.js
pet-directory/coverage/: clover.xml  coverage-final.json
pet-directory/coverage/lcov-report/: index.html
pet-directory/coverage/lcov-report/config/: config.js.html  db.js.html  index.html
pet-directory/coverage/lcov-report/controllers/: authController.js.html  businessController.js.html  index.html  reviewController.js.html  serviceController.js.html
pet-directory/coverage/lcov-report/middlewares/validators/: index.html  userValidator.js.html  validateMiddleware.js.html
pet-directory/coverage/lcov-report/models/: business.js.html  index.html  index.js.html  pet.js.html  review.js.html  service.js.html  user.js.html
pet-directory/coverage/lcov-report/routes/: auth.js.html  index.html
pet-directory/cypress/e2e/: auth.cy.js  business.cy.js  comprehensive-test-suite.cy.js  pets.cy.js  reviews.cy.js  sanity.cy.js  search.cy.js  services.cy.js  user-profile.cy.js
pet-directory/cypress/support/: commands.js
pet-directory/docs/: API_DOCS.md  README.md  project-status.md
pet-directory/helpers/: authHelpers.js
pet-directory/load-tests/: README.md  api-load-test.js  basic.yml  basic.yml.new  smoke.yml
pet-directory/middlewares/: authMiddleware.js  latencyMiddleware.js
pet-directory/middlewares/validators/: businessValidator.js  reviewValidator.js  serviceValidator.js  userValidator.js  validateMiddleware.js
pet-directory/migrations/: 20250827000100-create-user.js  20250827000200-create-business.js  20250827000300-create-pet.js  20250827000350-create-service.js  20250827000400-create-review.js
pet-directory/models/: business.js  index.js  pet.js  review.js  service.js  user.js
pet-directory/routes/: auth.js  businesses.js  reviews.js  services.js
pet-directory/secrets/: db_name.txt  jwt_secret.txt
pet-directory/seeders/: 20250831-super-seed.js
pet-directory/tests/: setup.js
pet-directory/tests/controllers/: authController.test.js  businessController.test.js  reviewController.test.js  serviceController.test.js
pet-directory/tests/integration/: auth.test.js
weather-mlops-pipeline/: .gitignore  Dockerfile  Dockerfile.kubeflow  README.md  README_KUBEFLOW.md  docker-compose.yml  manage_database.py  mlflow_tracking.yaml  pyproject.toml  requirements.txt  run_kubeflow_pipeline.py  run_pipeline.py  start.sh  weather_dashboard.py  weather_ml_pipeline.yaml
weather-mlops-pipeline/.github/workflows/: ci.yml
weather-mlops-pipeline/config/: config.example.yaml
weather-mlops-pipeline/data/: weather.db
weather-mlops-pipeline/data/models/: weather_model.pkl
weather-mlops-pipeline/data/processed/: weather_clean.csv
weather-mlops-pipeline/data/raw/: weather_raw.json
weather-mlops-pipeline/docker/: production.py
weather-mlops-pipeline/k8s/: kubeflow-deployment.yaml
weather-mlops-pipeline/pipelines/: dag.py  kubeflow_pipeline.py
weather-mlops-pipeline/src/: __main__.py
weather-mlops-pipeline/src/deploy/: app.py
weather-mlops-pipeline/src/ingest/: fetch_weather.py
weather-mlops-pipeline/src/preprocess/: clean_weather.py  feature_engineering.py
weather-mlops-pipeline/src/train/: evaluate.py  train_model.py
weather-mlops-pipeline/src/utils/: database.py  helpers.py  logger.py  monitoring.py  security.py
weather-mlops-pipeline/test/: test_ingest.py  test_model.py  test_preprocess.py
weather-mlops-pipeline/weather_mlops_pipeline/: __main__.py
weather-mlops-pipeline/weather_mlops_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
weather-mlops-pipeline/weather_mlops_pipeline/deploy/: app.py
weather-mlops-pipeline/weather_mlops_pipeline/ingest/: fetch_weather.py
weather-mlops-pipeline/weather_mlops_pipeline/preprocess/: clean_weather.py  feature_engineering.py
weather-mlops-pipeline/weather_mlops_pipeline/train/: evaluate.py  train_model.py
weather-mlops-pipeline/weather_mlops_pipeline/utils/: config.py  database.py  helpers.py  logger.py  monitoring.py  security.py
weather-mlops-pipeline/weather_mlops_pipeline/weather_mlops_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
